non-msrv-tests/tests/ui/default.stderr
error: unknown option
 --> tests/ui/default.rs:4:42
  |
4 | struct DefaultOnStruct<T>(#[derive_where(default)] PhantomData<T>);
  |                                          ^^^^^^^

error: `default` is only supported if `Default` is being implemented
 --> tests/ui/default.rs:8:17
  |
8 |     #[derive_where(default)]
  |                    ^^^^^^^

error: required `default` option on a variant if `Default` is being implemented
  --> tests/ui/default.rs:12:1
   |
12 | #[derive_where(Default)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: multiple `default` options in enum
  --> tests/ui/default.rs:21:17
   |
21 |     #[derive_where(default)]
   |                    ^^^^^^^

error: duplicate `default` option
  --> tests/ui/default.rs:27:26
   |
27 |     #[derive_where(default, default)]
   |                             ^^^^^^^

error: duplicate `default` option
  --> tests/ui/default.rs:34:17
   |
34 |     #[derive_where(default)]
   |                    ^^^^^^^
